# wf-panel-pi

./: README  README-kbdlayout.md  README.md  meson.build
data/: 10-wfpanel-installer.rules  config.ui  lxpanel-modal.ui  lxplug-bluetooth.ui  lxplug-updater.ui  meson.build  wf-panel-pi.desktop
debian/: changelog  control  copyright  rules  wf-panel-pi.install
metadata/: meson.build  panel-pi.xml  panel.xml
po/: LINGUAS  POTFILES.in  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  (+56 more)
proto/: meson.build
src/: meson.build
src/api/: conf-utils.h  widget.hpp
src/api/config/: duration.hpp  option-wrapper.hpp  option.hpp
src/api/wf-panel-pi/: conf-utils.h  configure.h  gtk-utils.hpp  launcher.h  lxutils.h  notification.h  panel.hpp  spacer.hpp  wf-autohide-window.hpp  wf-shell-app.hpp  widget.hpp
src/api/wf-panel-pi/config/: compound-option.hpp  config-manager.hpp  file.hpp  log.hpp  option-types.hpp  option-wrapper.hpp  section.hpp
src/background/: meson.build  wf-background
src/installer/: installer.c  meson.build
src/panel/: conf-utils.cpp  configure.c  configure.h  gtk-utils.cpp  launcher.c  lxutils.c  lxutils.h  meson.build  notification.c  notify.c  panel.cpp  panel.hpp  spacer.cpp  spacer.hpp  wf-autohide-window.cpp  wf-autohide-window.hpp  wf-option-wrap.hpp  wf-shell-app.cpp  wf-shell-app.hpp  wfpanelctl  widget.hpp
src/panel/config/: compound-option.cpp  config-manager.cpp  duration.cpp  file.cpp  file.hpp  log.cpp  option-impl.hpp  option.cpp  section-impl.hpp  section.cpp  types.cpp  types.hpp  xml.cpp  xml.hpp
src/panel/widgets/: batt.cpp  batt.hpp  bluetooth.cpp  bluetooth.hpp  clock.cpp  clock.hpp  cpu.cpp  cpu.hpp  cputemp.cpp  cputemp.hpp  ejecter.cpp  ejecter.hpp  gpu.cpp  gpu.hpp  graph.c  graph.h  kbdlayout.cpp  kbdlayout.hpp  kbswitch.cpp  kbswitch.hpp  launcher.c  launcher.h  launchers.cpp  launchers.hpp  lxutils.c  lxutils.h  menu.cpp  menu.hpp  micpulse.cpp  micpulse.hpp  netman.cpp  netman.hpp  notify.c  notify.cpp  notify.hpp  power.cpp  power.hpp  smenu.cpp  smenu.hpp  spacer.cpp  (+10 more)
src/panel/widgets/batt/: batt.c  batt.cpp  batt.h
src/panel/widgets/bluetooth/: bluetooth.c  bluetooth.h  bluetooth.hpp
src/panel/widgets/clock/: clock.c  clock.h
src/panel/widgets/cpu/: cpu.c  cpu.h  cputemp.c
src/panel/widgets/cputemp/: cputemp.c  cputemp.h  cputemp.hpp
src/panel/widgets/ejecter/: ejecter.c  ejecter.cpp  ejecter.h
src/panel/widgets/gpu/: gpu.c  gpu.h
src/panel/widgets/kbswitch/: kbswitch.c  kbswitch.h
src/panel/widgets/launchers/: launchers.cpp
src/panel/widgets/netman/: ap-menu-item.c  applet-agent.c  applet-device-bt.c  applet-device-wifi.c  applet-device-wifi.h  applet-dialogs.c  applet-vpn-request.c  applet.c  applet.h  mb-menu-item.c  mobile-helpers.c  netman-resources.c  netman.c  nm-default.h
src/panel/widgets/netman/nm-utils/: nm-compat.c  nm-shared-utils.c
src/panel/widgets/notify/: notify.cpp
src/panel/widgets/power/: power.c  power.h  power.hpp  ptbatt.c  ptbatt.h
src/panel/widgets/smenu/: menu.c  menu.h  smenu.hpp
src/panel/widgets/tray/: item.cpp  tray.cpp  tray.hpp  watcher.cpp
src/panel/widgets/updater/: updater.c  updater.cpp  updater.h
src/panel/widgets/volumepulse/: bluetooth.c  bluetooth.h  commongui.c  commongui.h  micpulse.c  pulse.c  pulse.h  volumepulse.c  volumepulse.h
src/panel/widgets/window-list/: toplevel.cpp  toplevel.hpp  window-list.cpp  window-list.hpp
src/util/: conf-utils.cpp  config.c  config.h  configure.c  gtk-utils.cpp  meson.build  notification.h  wf-autohide-window.cpp  wf-autohide-window.hpp  wf-shell-app.cpp  wf-shell-app.hpp
src/widgets/: meson.build  ~meson.build
src/widgets/batt/: batt.c  batt.cpp  batt.h  batt.hpp  meson.build
src/widgets/bluetooth/: bluetooth.c  bluetooth.cpp  bluetooth.h  bluetooth.hpp  meson.build
src/widgets/clock/: clock.c  clock.cpp  clock.h  clock.hpp  clock.xml  meson.build
src/widgets/cpu/: cpu.c  cpu.cpp  cpu.h  cpu.hpp  cpu.xml  meson.build
src/widgets/cputemp/: cputemp.c  cputemp.cpp  cputemp.h  cputemp.hpp  cputemp.xml  meson.build
src/widgets/ejecter/: ejecter.c  ejecter.cpp  ejecter.h  ejecter.hpp  ejecter.xml  meson.build
src/widgets/gpu/: gpu.c  gpu.cpp  gpu.h  gpu.hpp  gpu.xml  meson.build
src/widgets/launchers/: launchers.c  launchers.cpp  launchers.h  launchers.hpp  launchers.xml  meson.build
src/widgets/netman/: ap-menu-item.c  ap-menu-item.h  applet-agent.c  applet-device-broadband.c  applet-device-ethernet.c  applet-device-wifi.c  applet-dialogs.c  applet.c  applet.gresource.xml  applet.h  meson.build  netman.c  netman.cpp  netman.hpp  nm-default.h  nm-macros-internal.h  utils.c
src/widgets/notify/: meson.build  notify.cpp  notify.xml
src/widgets/power/: meson.build  power.c  power.cpp  power.h  power.hpp
src/widgets/smenu/: gtk-run.c  menu.c  menu.h  meson.build  smenu.cpp  smenu.hpp  smenu.xml
src/widgets/spacing/: meson.build  spacing.cpp
src/widgets/tray/: item.cpp  item.hpp  meson.build  tray.cpp  tray.hpp  tray.xml  watcher.hpp
src/widgets/updater/: meson.build  updater.c  updater.cpp  updater.h  updater.hpp  updater.xml
src/widgets/volumepulse/: bluetooth.c  bluetooth.h  commongui.c  commongui.h  meson.build  micpulse.c  pulse.c  volumepulse.c  volumepulse.cpp  volumepulse.h  volumepulse.hpp
src/widgets/window-list/: meson.build  toplevel.cpp  toplevel.hpp  window-list.cpp  window-list.hpp  window-list.xml  winlist.c  winlist.cpp  winlist.h  winlist.hpp
subprojects/: wayfire-kbdd-plugin.wrap
